--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -4,8 +4,8 @@
 }
 html,body{
     width: 100%;
-    height: 100%;
-    font-family: SimSun;
+    height: 100%; 
+    font-family: Microsoft YaHei;
 }
 a{
     text-decoration: none;
